--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,41 +3,41 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # or your default branch name
-  workflow_dispatch:  # Allows manual trigger
+      - main
+      - master
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Debug Environment
+      run: |
+        echo "Debugging environment variables (safely)"
+        echo "EC2_HOST exists: ${{ secrets.EC2_HOST != '' }}"
+        echo "EC2_USER exists: ${{ secrets.EC2_USER != '' }}"
+        echo "EC2_SSH_KEY exists: ${{ secrets.EC2_SSH_KEY != '' }}"
 
     - name: Install SSH key
       uses: webfactory/ssh-agent@v0.5.4
       with:
         ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-    - name: Add EC2 to known hosts
+    - name: Setup SSH directory
       run: |
         mkdir -p ~/.ssh
-        ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+        chmod 700 ~/.ssh
+        touch ~/.ssh/known_hosts
+        chmod 644 ~/.ssh/known_hosts
 
-    - name: Deploy to EC2
-      env:
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_HOST: ${{ secrets.EC2_HOST }}
+    - name: Add EC2 to known hosts
       run: |
-        # Copy index.html to EC2
-        scp index.html $EC2_USER@$EC2_HOST:/tmp/index.html
-        
-        # Move file to Nginx directory with sudo
-        ssh $EC2_USER@$EC2_HOST '
-          sudo mv /tmp/index.html /usr/share/nginx/html/index.html
-          sudo chown nginx:nginx /usr/share/nginx/html/index.html
-          sudo chmod 644 /usr/share/nginx/html/index.html
-          sudo systemctl reload nginx
-        '
-
-
+        if [ -z "${{ secrets.EC2_HOST }}" ]; then
+          echo "Error: EC2_HOST secret is not set"
+          exit 1
+        fi
+        ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts || echo "Failed to scan host key"
