--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Test EC2 connection
-      run: |
-        echo "Testing connection to EC2..."
-        ping -c 4 ec2-3-70-223-49.eu-central-1.compute.amazonaws.com
-
     - name: Install SSH key
       uses: webfactory/ssh-agent@v0.5.4
       with:
@@ -29,27 +24,18 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         chmod 700 ~/.ssh
-        echo "Host ec2-3-70-223-49.eu-central-1.compute.amazonaws.com" >> ~/.ssh/config
-        echo "    StrictHostKeyChecking no" >> ~/.ssh/config
-        echo "    UserKnownHostsFile /dev/null" >> ~/.ssh/config
+        echo -e "Host ec2-3-70-223-49.eu-central-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile=/dev/null\n" > ~/.ssh/config
         chmod 600 ~/.ssh/config
 
-    - name: Test SSH Connection
-      run: |
-        echo "Testing SSH connection..."
-        ssh -v ${{ secrets.EC2_USER }}@ec2-3-70-223-49.eu-central-1.compute.amazonaws.com 'echo "SSH connection successful"'
-
     - name: Deploy to EC2
-      env:
-        EC2_USER: ${{ secrets.EC2_USER }}
       run: |
         echo "Starting deployment..."
-        scp -v index.html $EC2_USER@ec2-3-70-223-49.eu-central-1.compute.amazonaws.com:/tmp/index.html
-        ssh $EC2_USER@ec2-3-70-223-49.eu-central-1.compute.amazonaws.com '
+        scp -o StrictHostKeyChecking=no index.html ec2-user@ec2-3-70-223-49.eu-central-1.compute.amazonaws.com:/tmp/index.html
+        ssh -o StrictHostKeyChecking=no ec2-user@ec2-3-70-223-49.eu-central-1.compute.amazonaws.com '
           sudo mv /tmp/index.html /usr/share/nginx/html/index.html
           sudo chown nginx:nginx /usr/share/nginx/html/index.html
           sudo chmod 644 /usr/share/nginx/html/index.html
           sudo systemctl reload nginx
+          echo "Deployment completed successfully"
         '
-
 
