Updated Workflow file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,43 @@
-name: Deploy to EC2
+name: Deploy Static Website to EC2
 
 on:
   push:
     branches:
-      - main  # I see you're on master branch from the prompt
-  workflow_dispatch:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    
+      # Step 1: Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Install SSH key
-      uses: webfactory/ssh-agent@v0.5.4
-      with:
-        ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+      # Step 2: Set up SSH keys
+      - name: Set up SSH keys
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-keyscan -H ${{ secrets.EC2_PUBLIC_IP }} >> ~/.ssh/known_hosts
+        env:
+          DEPLOY_SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
+          EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
 
-    - name: Configure SSH
-      run: |
-        mkdir -p ~/.ssh
-        chmod 700 ~/.ssh
-        echo -e "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile=/dev/null\n" > ~/.ssh/config
-        chmod 600 ~/.ssh/config
+      # Step 3: Deploy static files to EC2
+      - name: Copy files to EC2
+        run: |
+          rsync -avz --delete ./dist/ ${{ secrets.EC2_USER }}@${{ secrets.EC2_PUBLIC_IP }}:/var/www/html/
+        env:
+          EC2_USER: ${{ secrets.EC2_USER }}
+          EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
 
-    - name: Debug SSH Key
-      run: ssh-add -l
-
-    - name: Deploy to EC2
-      run: |
-        echo "Starting deployment..."
-        scp index.html ubuntu@ec2-3-70-223-49.eu-central-1.compute.amazonaws.com:/tmp/index.html
-        ssh ubuntu@ec2-3-70-223-49.eu-central-1.compute.amazonaws.com '
-          sudo mv /tmp/index.html /usr/share/nginx/html/index.html
-          sudo chown www-data:www-data /usr/share/nginx/html/index.html
-          sudo chmod 644 /usr/share/nginx/html/index.html
-          sudo systemctl reload nginx
-          echo "Deployment completed successfully"
-        '
-
+      # Step 4: Restart the web server (if applicable)
+      - name: Restart web server (optional)
+        run: |
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_PUBLIC_IP }} "sudo systemctl restart apache2"
+        env:
+          EC2_USER: ${{ secrets.EC2_USER }}
+          EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
 
