--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
         chmod 600 private_key.pem
         
         # Deploy using SSH
-        scp -o StrictHostKeyChecking=no -i private_key.pem index.html ${USER}@${HOST}:/var/www/html/
+        scp -o StrictHostKeyChecking=no -i private_key.pem index.html ${USER}@${HOST}:/usr/share/nginx/html/
         
-        # Optional: Restart web server if needed
-        ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} 'sudo systemctl restart apache2'
+        # Optional: Restart Nginx if needed
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} 'sudo systemctl restart nginx'
         
         # Clean up
         rm -f private_key.pem
