--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,16 @@ jobs:
         echo "$PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
         
-        # Deploy using SSH
-        scp -o StrictHostKeyChecking=no -i private_key.pem index.html ${USER}@${HOST}:/usr/share/nginx/html/
+        # First copy to home directory, then move with sudo
+        scp -o StrictHostKeyChecking=no -i private_key.pem index.html ${USER}@${HOST}:~/
         
-        # Optional: Restart Nginx if needed
-        ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} 'sudo systemctl restart nginx'
+        # Move file to nginx directory with sudo and set permissions
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} '
+          sudo mv ~/index.html /usr/share/nginx/html/
+          sudo chown nginx:nginx /usr/share/nginx/html/index.html
+          sudo chmod 644 /usr/share/nginx/html/index.html
+          sudo systemctl restart nginx
+        '
         
         # Clean up
         rm -f private_key.pem
