--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Set up private key for SSH
+      run: |
+        echo "$PRIVATE_KEY" > private_key.pem
+        chmod 600 private_key.pem
+
+    - name: Debug - Test SSH connection to EC2
+      run: |
+        echo "Testing SSH connection..."
+        ssh -v -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} 'echo "SSH connection successful!"'
       
     - name: Deploy to EC2
       env:
@@ -19,21 +29,20 @@ jobs:
         HOST: ${{ secrets.EC2_HOST }}
         USER: ${{ secrets.EC2_USER }}
       run: |
-        # Store private key
-        echo "$PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
+        # Copy index.html to EC2
+        echo "Deploying index.html to EC2..."
+        scp -v -o StrictHostKeyChecking=no -i private_key.pem index.html ${USER}@${HOST}:~/ 
         
-        # First copy to home directory, then move with sudo
-        scp -o StrictHostKeyChecking=no -i private_key.pem index.html ${USER}@${HOST}:~/
-        
-        # Move file to nginx directory with sudo and set permissions
-        ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} '
+        # Move file to nginx directory, set permissions, and restart nginx
+        ssh -v -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} '
+          echo "Moving file to /var/www/html/"
           sudo mv ~/index.html /var/www/html/
-          sudo chown nginx:nginx  /var/www/html/index.html
+          sudo chown nginx:nginx /var/www/html/index.html
           sudo chmod 644 /var/www/html/index.html
           sudo systemctl restart nginx
+          echo "Deployment complete!"
         '
-        
-        # Clean up
-        rm -f private_key.pem
 
+    - name: Clean up private key
+      run: |
+        rm -f private_key.pem
