devops 3 first commit 7

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,41 +3,37 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # Trigger the deployment on push to the main branch
+      - main  # or your default branch name
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     
     steps:
-    # Step 1: Checkout the repository
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # Step 2: Set up the SSH private key for authentication
-    - name: Set up SSH private key for deployment
+    - name: Set up private key for SSH
       run: |
         echo "$PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
 
-    # Step 3: Debug - Test SSH connection to EC2
-    - name: Test SSH connection to EC2
+    - name: Debug - Test SSH connection to EC2
       run: |
         echo "Testing SSH connection..."
         ssh -v -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} 'echo "SSH connection successful!"'
       
-    # Step 4: Deploy the application to EC2
     - name: Deploy to EC2
       env:
-        PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}  # Fetch the private key from GitHub Secrets
-        HOST: ${{ secrets.EC2_HOST }}                    # Fetch the EC2 host IP or hostname from GitHub Secrets
-        USER: ${{ secrets.EC2_USER }}                    # Fetch the EC2 username from GitHub Secrets
+        PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        HOST: ${{ secrets.EC2_HOST }}
+        USER: ${{ secrets.EC2_USER }}
       run: |
-        # Step 4.1: Copy index.html to the EC2 instance
+        # Copy index.html to EC2
         echo "Deploying index.html to EC2..."
         scp -v -o StrictHostKeyChecking=no -i private_key.pem index.html ${USER}@${HOST}:~/ 
         
-        # Step 4.2: Move the file to the Nginx directory and set proper permissions
+        # Move file to nginx directory, set permissions, and restart nginx
         ssh -v -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} '
           echo "Moving file to /var/www/html/"
           sudo mv ~/index.html /var/www/html/
@@ -47,7 +43,6 @@ jobs:
           echo "Deployment complete!"
         '
 
-    # Step 5: Clean up private key
     - name: Clean up private key
       run: |
         rm -f private_key.pem
