--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,9 @@ jobs:
         
         # Move file to nginx directory with sudo and set permissions
         ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} '
-          sudo mv ~/index.html /usr/share/nginx/html/
-          sudo chown nginx:nginx /usr/share/nginx/html/index.html
-          sudo chmod 644 /usr/share/nginx/html/index.html
+          sudo mv ~/index.html /var/www/html/
+          sudo chown nginx:nginx /var/www/html/index.html
+          sudo chmod 644 /var/www/html/index.html
           sudo systemctl restart nginx
         '
         
